php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48257 PharData throws exception with non-phar tar
Submitted: 2009-05-13 06:24 UTC Modified: 2009-10-19 18:11 UTC
From: cellog@php.net Assigned:
Status: Closed Package: PHAR related
PHP Version: 5.3CVS-2009-05-13 (CVS) OS: n/a
Private report: No CVE-ID: None
 [2009-05-13 06:24 UTC] cellog@php.net
Description:
------------
pear download Net_URL
php -r 'new PharData("Net_URL-1.0.15.tgz");'

results in exception, tar does not have signature.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-05-13 20:28 UTC] cellog@php.net
fixed in HEAD, 5.3, and pecl/phar

documentation needs to state that phar.require_hash does not affect plain tar files, thus:

<?php
$a = new PharData('sometar.tar');
?>

will not fail if sometar.tar does not have a signature.

<?php
$a = new Phar('sometar.phar.tar');
?>

will fail if sometar.phar.tar does not contain a signature.
 [2009-10-19 18:11 UTC] svn@php.net
Automatic comment from SVN on behalf of saltybeagle
Revision: http://svn.php.net/viewvc/?view=revision&revision=289759
Log: Bug #48257 add note about phar.require_hash not affecting plain tar files.
 [2009-10-19 18:11 UTC] saltybeagle@php.net
This bug has been fixed in the documentation's XML sources. Since the
online and downloadable versions of the documentation need some time
to get updated, we would like to ask you to be a bit patient.

Thank you for the report, and for helping us make our documentation better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Aug 22 04:00:01 2026 UTC