fix Bug #48257: PharData throws exception with non-phar tar

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@280471 c90b9560-bf6c-de11-be94-00142212c4b1